@@ -1,3 +1,11 @@
+2002-10-18 Erwann Chenede - <erwann.chenede@sun.com>
+
+        * gnome-settings-keybindings.c
+	(screen_exec_display_string) : added function to get display 
+				       string from an XEvent.
+        (keybindings_filter) : set a fully qualified DISPLAY env variable
+			       when spawing a keybinding action.
+
 2002-10-08  Jody Goldberg <jody@gnome.org>
 
 	http://bugzilla.gnome.org/show_bug.cgi?id=91535
